[feat] User의 Department의존성 주입